--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,17 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "pydantic>=2.12.4",
-    "pydantic-ai-slim[openai]>=1.12.0",
+    "pydantic-ai>=1.12.0",
     "typer>=0.20.0",
+    "pyyaml>=6.0.2",
+    "python-frontmatter>=1.1.0",
 ]
+
+[project.scripts]
+scribae = "scribae.main:app"
+
+[tool.uv]
+package = true
 
 [dependency-groups]
 dev = [
@@ -45,6 +53,10 @@ check_untyped_defs = true
 disallow_untyped_calls = true
 disallow_untyped_defs = true
 warn_unused_ignores = true
+
+[[tool.mypy.overrides]]
+module = ["frontmatter", "yaml"]
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
