--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ package = true
 
 [dependency-groups]
 dev = [
+    "faker>=37.12.0",
     "mypy>=1.18.2",
     "pre-commit>=4.3.0",
     "pytest>=8.4.2",
