chore: exclude `brief_invalid.json` from pre-commit JSON formatting

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,4 +17,6 @@ repos:
       - id: name-tests-test
       - id: pretty-format-json
         args: [ "--autofix", "--indent=2" ]
+        exclude: |
+          ^tests/fixtures/brief_invalid\.json$
       - id: trailing-whitespace
