--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,10 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'pipenv'
+          cache: pip
+          cache-dependency-path: |
+            pyproject.toml
+            uv.lock
       - name: Install dependencies
         run: uv sync
       - name: Run ruff checks
@@ -43,7 +46,10 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'pipenv'
+          cache: pip
+          cache-dependency-path: |
+            pyproject.toml
+            uv.lock
       - name: Install dependencies
         run: uv sync
       - name: Run unit tests
