--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,16 +18,14 @@ jobs:
         uses: actions/checkout@v6
       - name: Install uv
         uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: pip
-          cache-dependency-path: |
-            pyproject.toml
-            uv.lock
       - name: Install dependencies
-        run: uv sync
+        run: uv sync --locked --all-extras --dev
       - name: Run ruff checks
         run: uv run ruff check
       - name: Run mypy for type checking
@@ -42,15 +40,13 @@ jobs:
         uses: actions/checkout@v6
       - name: Install uv
         uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: pip
-          cache-dependency-path: |
-            pyproject.toml
-            uv.lock
       - name: Install dependencies
-        run: uv sync
+        run: uv sync --locked --all-extras --dev
       - name: Run unit tests
         run: uv run pytest -v
