--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "transformers>=4.46.3",
     "torch>=2.5.1",
     "sentencepiece>=0.2.0",
+    "sacremoses>=0.1.1",
 ]
 
 [project.scripts]
