--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "torch>=2.5.1",
     "sentencepiece>=0.2.0",
     "sacremoses>=0.1.1",
+    "fast-langdetect>=1.0.0",
+    "fasttext>=0.9.3",
 ]
 
 [project.scripts]
