--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,12 @@ dependencies = [
     "typer>=0.20.0",
     "pyyaml>=6.0.2",
     "python-frontmatter>=1.1.0",
+    "transformers>=4.46.3",
+    "torch>=2.5.1",
+    "sentencepiece>=0.2.0",
+    "sacremoses>=0.1.1",
+    "fast-langdetect>=1.0.0",
+    "fasttext>=0.9.3",
 ]
 
 [project.scripts]
