--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
     "Topic :: Text Processing",
     "Topic :: Text Processing :: Linguistic",
 ]
@@ -41,7 +40,7 @@ dependencies = [
     "sentencepiece>=0.2.0",
     "sacremoses>=0.1.1",
     "fast-langdetect>=1.0.0",
-    "fasttext>=0.9.3",
+    "fasttext-wheel>=0.9.2",
     "tomli>=2.0.0;python_version<'3.11'",
 ]
 
