--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "sentencepiece>=0.2.0",
     "sacremoses>=0.1.1",
     "fast-langdetect>=1.0.0",
-    "fasttext-wheel>=0.9.2",
+    "fasttext-predict==0.9.2.4",
     "tomli>=2.0.0;python_version<'3.11'",
 ]
 
