--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,12 +36,22 @@ dependencies = [
     "pyyaml>=6.0.2",
     "python-frontmatter>=1.1.0",
     "transformers>=4.46.3",
-    "torch>=2.5.1",
     "sentencepiece>=0.2.0",
     "sacremoses>=0.1.1",
     "fast-langdetect>=1.0.0",
     "fasttext-predict==0.9.2.4",
     "tomli>=2.0.0;python_version<'3.11'",
+]
+
+[project.optional-dependencies]
+translation = [
+    "torch>=2.5.1",
+]
+translation-cpu = [
+    "torch @ https://download.pytorch.org/whl/cpu/torch-2.5.1%2Bcpu-cp310-cp310-linux_x86_64.whl; python_version == '3.10' and sys_platform == 'linux' and platform_machine == 'x86_64'",
+    "torch @ https://download.pytorch.org/whl/cpu/torch-2.5.1%2Bcpu-cp311-cp311-linux_x86_64.whl; python_version == '3.11' and sys_platform == 'linux' and platform_machine == 'x86_64'",
+    "torch @ https://download.pytorch.org/whl/cpu/torch-2.5.1%2Bcpu-cp312-cp312-linux_x86_64.whl; python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
+    "torch>=2.5.1; sys_platform != 'linux' or platform_machine != 'x86_64'",
 ]
 
 [project.scripts]
