--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,12 +47,6 @@ dependencies = [
 translation = [
     "torch>=2.5.1",
 ]
-translation-cpu = [
-    "torch @ https://download.pytorch.org/whl/cpu/torch-2.5.1%2Bcpu-cp310-cp310-linux_x86_64.whl; python_version == '3.10' and sys_platform == 'linux' and platform_machine == 'x86_64'",
-    "torch @ https://download.pytorch.org/whl/cpu/torch-2.5.1%2Bcpu-cp311-cp311-linux_x86_64.whl; python_version == '3.11' and sys_platform == 'linux' and platform_machine == 'x86_64'",
-    "torch @ https://download.pytorch.org/whl/cpu/torch-2.5.1%2Bcpu-cp312-cp312-linux_x86_64.whl; python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
-    "torch>=2.5.1; sys_platform != 'linux' or platform_machine != 'x86_64'",
-]
 
 [project.scripts]
 scribae = "scribae.main:app"
@@ -65,6 +59,11 @@ Changelog = "https://github.com/fmueller/scribae/blob/main/CHANGELOG.md"
 
 [tool.uv]
 package = true
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
 
 [dependency-groups]
 dev = [
