--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           python-version-file: '.python-version'
       - name: Install dependencies
-        run: uv sync --locked --all-extras --dev
+        run: uv sync --locked --all-extras --dev --index pytorch-cpu
       - name: Run ruff checks
         run: uv run ruff check
       - name: Run mypy for type checking
@@ -48,6 +48,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run: uv sync --locked --all-extras --dev
+        run: uv sync --locked --all-extras --dev --index pytorch-cpu
       - name: Run unit tests
         run: uv run pytest -v
