fix: configure setuptools package discovery

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,3 +114,10 @@ pythonpath = ["src"]
 [build-system]
 requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = { "" = "src" }
+include-package-data = true
+
+[tool.setuptools.packages.find]
+where = ["src"]
